--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Gridiron CSS</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="Neuetab LLC">
+<meta name="description" content="">
+<meta name="keywords" content="">
+<meta name="robots" content="index, nofollow"/>
+<link rel="stylesheet" href="gridiron.min.css" type="text/css">
+</head>
+
+<body>
+<div id="container">
+
 <h1>Gridiron Homepage</h1>
+
+</div><!------ end of container---->
+</body>
+</html>
+
+
