update Gridiron Homepage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
 <div id="container">
-
+<div id="header">
+<img src="img/gridiron_logo.png"  alt="Gridiron Logo"/>
+</div>
 <h1>Gridiron Homepage</h1>
 
 </div><!------ end of container---->
