--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta name="keywords" content="">
 <meta name="robots" content="index, nofollow"/>
 <link rel="stylesheet" href="gridiron.min.css" type="text/css">
+<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body>
