--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <div id="container">
 <div id="header">
-<img class="center-inline" src="img/gridiron_logo.png"  alt="Gridiron Logo"/>
+<img class="logo" src="img/gridiron_logo.png"  alt="Gridiron Logo"/>
 </div>
 <h1>Gridiron Homepage</h1>
 
